[project]
name = "expiringdict"
version = "0.1.0"
description = "Dictionary with auto-expiring values for caching purposes with typing"
authors = [
    {name = "AzideCupric", email = "rukuy@qq.com"},
]
dependencies = [
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache License 2.0"}
classifiers = [
          "Development Status :: 4 - Beta",
          "Intended Audience :: Developers",
          "License :: OSI Approved :: Apache Software License",
          "Programming Language :: Python :: 3",
          "Programming Language :: Python :: 3.10",
          "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
test = [
    "coveralls>=3.3.1",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
lint = [
    "ruff>=0.1.2",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
]
dev = [
    "typing-extensions>=4.8.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "E501", "C901", "PT023", "Q000", "Q001", "Q002", "Q003"]

line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
preview = true
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
length_sort = true
force_sort_within_sections = true
src_paths = ["nonebot_plugin_skland_arksign", "tests"]
extra_standard_library = ["typing_extensions"]
